--- a/sekce/figures.tex
+++ b/sekce/figures.tex
@@ -1,24 +1,25 @@
-\fullfig[width=0.65\textwidth]{figures/voltmetr.jpg}[Použitý milivoltmetr][fig:voltmetr]
+\fullfig[width=0.65\textwidth]{voltmetr.jpg}[Použitý milivoltmetr][fig:voltmetr]
 
-\fullfig[width=0.9\textwidth]{figures/aparatura.jpg}[Aparatura experimentu]
+\fullfig[width=0.9\textwidth]{aparatura.jpg}[Aparatura experimentu]
 
-\fullfig[width=0.6\textwidth]{figures/aparatura_detail.jpg}[Detail ponoření termočlánků v kapalinách]
+\fullfig[width=0.6\textwidth]{aparatura_detail.jpg}[Detail ponoření termočlánků v kapalinách]
 
 \begin{figure}[htpb]
     \hfill
     \centering
     \begin{subfigure}{0.45\textwidth}
         \centering
-        \includegraphics[width=0.95\linewidth]{figures/termoclanek_front.jpg}
+        \includegraphics[width=0.95\linewidth]{termoclanek_front.jpg}
         \caption{Přední strana}
     \end{subfigure}
     \hfill
     \begin{subfigure}{0.45\textwidth}
         \centering
-        \includegraphics[width=0.95\linewidth]{figures/termoclanek_back.jpg}
+        \includegraphics[width=0.95\linewidth]{termoclanek_back.jpg}
         \caption{Zadní strana}
     \end{subfigure}
     \hfill
     \caption{Sestavený termočlánek}
+    \label{fig:termoclanek}
 \end{figure}
 
