--- a/seminarka.tex
+++ b/seminarka.tex
@@ -36,7 +36,7 @@
 \prohlaseni{\subfile{sekce/prohlaseni.tex}}
 \podekovani{\subfile{sekce/podekovani.tex}}
 
-\graphicspath{{./graf/}}
+\graphicspath{{./graf/}{./figures/}}
 \addbibresource{sources.bib}
 
 %\geometry{showframe}
@@ -73,6 +73,7 @@
 \listoffigures
 \listoftables
 
+\vspace{1cm}
 \subfile{sekce/figures.tex}
 
 \end{document}
