--- a/sekce/podekovani.tex
+++ b/sekce/podekovani.tex
@@ -2,3 +2,4 @@ Touto cestou bych chtěl poděkovat vedoucímu mé seminární práce Mgr.~Roman
 Pav\-lač\-kovi,~Ph.D. za zpětnou vazbu při psaní této práce, za poskytnutí
 literatury a sehnání potřebného materiálu na stavbu termočlánku a mé kamarádce
 Soně Husákové za pomoc při jazykových korekturách.
+\vspace{1cm}
