--- a/sekce/3.1-metoda-ctvercu.tex
+++ b/sekce/3.1-metoda-ctvercu.tex
@@ -15,8 +15,8 @@ Při prokládání bodů funkcí se můžeme přiklonit k~jedné ze dvou metod:
 k~aproximaci, nebo interpolaci.
 
 \paragraph{Interpolace} je proces, kdy se snažíme nalézt takovou funkci, jež
-propojí všechny nám známé body. Nejjednodušší metodou, jak toho dosáhnout, je
-využití lineární interpolace, kdy každé dvě po sobě následující hodnoty
+propojí všechny nám známé body. Nejjednodušší metodou %, jak toho dosáhnout,
+je využití lineární interpolace, kdy každé dvě po sobě následující hodnoty
 propojíme přímkou. Můžeme se s~ní setkat například při vytváření grafů
 v~tabulkových editorech (např.~MS Excel či LibreOffice Calc), kdy propojení
 bodů přímkou je obvykle výchozí možnost vykreslování grafů. 
@@ -54,10 +54,10 @@ graf~\ref{graph:leastsquares}.
 
 \plotfig{graf/ctverce.tex}[Ukázka metody nejmenších čtverců][graph:leastsquares]
 
-Označme si naši teoretickou funkci  jako~$f(x)$, ve které figurují kupříkladu
-tři neznámé označené  jako~$a$, $b$ a~$c$. Do funkce~$f$ tak vstupuje
+Vytvořme si teoretickou funkci~$f(x)$, ve které figurují kupříkladu
+tři neznámé označené jako~$a$, $b$ a~$c$. Do funkce~$f$ tak vstupuje
 proměnná~$x$ a~neznámé parametry~$a,b,c$. Aproximace funkce pomocí metody
-nejmenších čtverců je tedy o~nalezení takové ideální hodnoty~$a,b,c$,
+nejmenších čtverců je poté o~nalezení takové ideální hodnoty~$a,b,c$,
 % buď "tedy", nebo "potom" -- jedno je vždy navíc
 aby součet čtverců odchylek byl co nejmenší.
 
