--- a/sekce/3.2-termoelektrika.tex
+++ b/sekce/3.2-termoelektrika.tex
@@ -18,8 +18,8 @@ nízkého rozdílu teplot převeden do lineární formy
     E &= \(\alpha_A - \alpha_B\)*\(T_2 - T_1\)\,,\\
     E &= \alpha\Delta T\,,
 }
-přičemž $\alpha$ značí koeficient pro danou dvojici kovů (také označován jako
-parametr termočlánku) a~$\Delta T$~je rozdíl teplot konců.~\cite{diplomka}
+přičemž $\alpha$ značí koeficient pro danou dvojici kovů (také pojmenováván
+jako parametr termočlánku) a~$\Delta T$~je rozdíl teplot konců.~\cite{diplomka}
 
 \paragraph{Seebeckův efekt} byl poprvé objeven německým fyzikem Thomasem
 Johannem Seebeckem a~popisuje vlastnost termočlánku, která má za příčinu
@@ -31,11 +31,10 @@ jiný potenciál, což je důvodem vzniku termoelektrického
 napětí.~\cite{jreichl-seebeck}
 
 \paragraph{Peltierův efekt} je považován za přesný opak efektu Seebeckova. Byl
-objeven Jeanem Peltierem v~roce~1834 a~dokazuje, že změna potenciálů, tedy
-protékání proudu, může způsobit změnu teplot. To implikuje přenos tepla
-z~jednoho konce na druhý, což může být využito například pro chlazení předmětu
-bez nutnosti jakýchkoliv pohybujících se součástek.~\mcite{peltier,
-jreichl-peltier}
+objeven Jeanem Peltierem v~roce~1834 a~dokazuje, že změna potenciálů může
+způsobit změnu teplot. To implikuje přenos tepla z~jednoho konce na druhý, což
+může být využito například pro chlazení předmětu bez nutnosti jakýchkoliv
+pohybujících se součástek.~\mcite{peltier, jreichl-peltier}
 
 \paragraph{Thomsonův efekt} je třetí efekt v~rámci termoelektrického jevu.
 Popisuje vlastnost vodiče při zahřívání jednoho z~jeho konců. Zahříváním
