--- a/sekce/3.1-metoda-ctvercu.tex
+++ b/sekce/3.1-metoda-ctvercu.tex
@@ -55,6 +55,7 @@ graf~\ref{graph:leastsquares}.
 \plotfig{graf/ctverce.tex}[Ukázka metody nejmenších čtverců][graph:leastsquares]
 
 Vytvořme si teoretickou funkci~$f(x)$, ve které figurují kupříkladu
+% matematici, tuším, standardně používají "Mějme funkci"
 tři neznámé označené jako~$a$, $b$ a~$c$. Do funkce~$f$ tak vstupuje
 proměnná~$x$ a~neznámé parametry~$a,b,c$. Aproximace funkce pomocí metody
 nejmenších čtverců je poté o~nalezení takové ideální hodnoty~$a,b,c$,
