--- a/sekce/5-zaver.tex
+++ b/sekce/5-zaver.tex
@@ -39,9 +39,11 @@ Následně jsme si vysvětlili princip termoelektrického jevu, co je to
 termočlánek a~jak tyto dva pojmy spolu souvisí. Poté jsme si popsali sestavení
 vlastního termočlánku, pro který jsme následně změřili a~za pomoci lineární
 regrese určili parametr. Ten byl pomocí rovnice~\ref{eq:thermo_param} určen
+% Vyměnila bych "určen" za "stanoven" kvůli vazbě s "na", která je s "určen" nepřirozená.
 na hodnotu $\alpha="0.036~2 mV.\C"$. Tento výsledek můžeme porovnat
-i~s~výpočtem provedeným programem (v našem případě se jednalo o MS~Excel) a
-lze pozorovat rovnající se výsledky, tudíž výpočet je úspěšný.
+i~s~výpočtem provedeným programem (v našem případě se jednalo o MS~Excel).
+Lze pozorovat rovnající se výsledky, tudíž výpočet je úspěšný.
+% "úspěšný výpočet" se mi nelíbí, spíš bych dala "správný", nebo "odpovídá <něčemu>"
 
 V~sekci~\ref{sec:presnost} jsme si také ukázali, jak vypočítat koeficient
 přesnosti naší prokládané funkce, který nám vyšel~$R^2="95.85 \%"$, čímž
