--- a/sekce/podekovani.tex
+++ b/sekce/podekovani.tex
@@ -2,4 +2,5 @@ Touto cestou bych chtěl poděkovat vedoucímu mé seminární práce Mgr.~Roman
 Pav\-lač\-kovi,~Ph.D. za zpětnou vazbu při psaní této práce, za poskytnutí
 literatury a sehnání potřebného materiálu na stavbu termočlánku a mé kamarádce
 Soně Husákové za pomoc při jazykových korekturách.
+% ^^ Snad jsem v poděkování nenechala chyby, jak mě potěšilo O:)
 \vspace{1cm}
