--- a/sekce/1-uvod.tex
+++ b/sekce/1-uvod.tex
@@ -13,9 +13,12 @@ tendenci, změřit hodnotu závislosti či predikovat pomocí trendu, jak by
 vypadala data dosud nezměřená. Tyto problémy umíme řešit pomocí prokládání dat
 matematickými funkcemi. Proložení dat funkcí\footnote{známo také jako
 \emph{fitování} dat z~anglického \uv{fit}} nám umožňuje ověřit, zda předpis
-naší funkce odpovídá naměřeným datům, vypočítat neznámý parametr předpisu
+naší funkce odpovídá naměřeným datům, a~vypočítat neznámý parametr předpisu
 (využíváno například při počítání různých koeficientů materiálů), nebo
-vyjádření závislé veličiny pro zatím neměřené vstupní hodnoty (např.~predikce
+% je to opraxdu (ověřit AND vypočítat) XOR vyjádřit? (pokud OR, tak "nebo"
+% bez čárky)
+vyjádřit závislou veličinu pro zatím neměřené vstupní hodnoty (např.~predikce
+%infinitiv kvůli zachování jednotnosti věty
 počtu nakažených nemocí). Máme více možností, jak tohoto proložení dosáhnout,
 přičemž jednou z nejrozšířenějších je metoda nejmenších čtverců.
 
@@ -23,8 +26,11 @@ přičemž jednou z nejrozšířenějších je metoda nejmenších čtverců.
 %určeny pomocí metody nejmenších čtverců. Nemůžeme ale vytvářet křivky bez
 %samotných dat.
 
-Ovšem předtím, než začneme modelovat křivky či odvozovat, jak jednotlivé
+Než ovšem začneme modelovat křivky či odvozovat, jak jednotlivé
 závislosti vypadají, musíme nejdříve naměřit samotná data. 
+%Ovšem předtím, než začneme modelovat křivky či odvozovat, jak jednotlivé
+%závislosti vypadají, musíme nejdříve naměřit samotná data. 
+% "předtím" a "než" hned za sebou znělo divně
 %\subsection{Termočlánek}
 
 Jak již bylo zmíněno, digitální měřicí přístroje nahrazují přístroje analogové.
