--- a/sekce/3.2-termoelektrika.tex
+++ b/sekce/3.2-termoelektrika.tex
@@ -19,6 +19,7 @@ nízkého rozdílu teplot převeden do lineární formy
     E &= \alpha\Delta T\,,
 }
 přičemž $\alpha$ značí koeficient pro danou dvojici kovů (také pojmenováván
+% dala bych "také nazýván" místo "také pojmenováván jako"
 jako parametr termočlánku) a~$\Delta T$~je rozdíl teplot konců.~\cite{diplomka}
 
 \paragraph{Seebeckův efekt} byl poprvé objeven německým fyzikem Thomasem
