--- a/sekce/3.1-metoda-ctvercu.tex
+++ b/sekce/3.1-metoda-ctvercu.tex
@@ -54,7 +54,7 @@ graf~\ref{graph:leastsquares}.
 
 \plotfig{graf/ctverce.tex}[Ukázka metody nejmenších čtverců][graph:leastsquares]
 
-Vytvořme si teoretickou funkci~$f(x)$, ve které figurují kupříkladu
+Kupříkladu mějme funkci~$f(x)$, ve které figurují 
 % matematici, tuším, standardně používají "Mějme funkci"
 tři neznámé označené jako~$a$, $b$ a~$c$. Do funkce~$f$ tak vstupuje
 proměnná~$x$ a~neznámé parametry~$a,b,c$. Aproximace funkce pomocí metody
@@ -192,6 +192,7 @@ jednoduše pomocí dosazovací metody vyřešit pro~$a$.
 A~protože nyní máme rovnici~\eqref{eq:a}  pro~$a$, můžeme ji dosadit do dříve
 odvozené rovnice~\eqref{eq:b_from_def}  pro~$b$, čímž dostáváme řešení této
 soustavy pro obě neznámé v~podobě rovností~\eqref{eq:a} a~\eqref{eq:b}.
+
 \eq[m]{
     b&=\frac{\nsumy-a\nsumx}{n}\\
     b&=\frac{\nsumy-\frac{n\nsumxy-\nsumx\nsumy}{n\nsumxx-\(\nsumx\)^2}\nsumx}{n}\\
