--- a/sekce/3.2-termoelektrika.tex
+++ b/sekce/3.2-termoelektrika.tex
@@ -18,7 +18,7 @@ nízkého rozdílu teplot převeden do lineární formy
     E &= \(\alpha_A - \alpha_B\)*\(T_2 - T_1\)\,,\\
     E &= \alpha\Delta T\,,
 }
-přičemž $\alpha$ značí koeficient pro danou dvojici kovů (také pojmenováván
+přičemž $\alpha$ značí koeficient pro danou dvojici kovů (také nazýván
 % dala bych "také nazýván" místo "také pojmenováván jako"
 jako parametr termočlánku) a~$\Delta T$~je rozdíl teplot konců.~\cite{diplomka}
 
