--- a/sekce/1-uvod.tex
+++ b/sekce/1-uvod.tex
@@ -15,8 +15,10 @@ matematickými funkcemi. Proložení dat funkcí\footnote{známo také jako
 \emph{fitování} dat z~anglického \uv{fit}} nám umožňuje ověřit, zda předpis
 naší funkce odpovídá naměřeným datům, a~vypočítat neznámý parametr předpisu
 (využíváno například při počítání různých koeficientů materiálů), nebo
-% je to opraxdu (ověřit AND vypočítat) XOR vyjádřit? (pokud OR, tak "nebo"
+% je to opravdu (ověřit AND vypočítat) XOR vyjádřit? (pokud OR, tak "nebo"
 % bez čárky)
+% mělo by to být ověřit OR vypočítat OR vyjádřit, respektive pokud se nepletu
+% tak jsem to původně myslel jako ověřit XOR vypočítat XOR vyjádřit
 vyjádřit závislou veličinu pro zatím neměřené vstupní hodnoty (např.~predikce
 %infinitiv kvůli zachování jednotnosti věty
 počtu nakažených nemocí). Máme více možností, jak tohoto proložení dosáhnout,
