--- a/seminarka.tex
+++ b/seminarka.tex
@@ -33,6 +33,7 @@
 \title{Stanovení parametru termočlánku pomocí metody nejmenších čtverců}
 \leader{Mgr.~Roman Pavlačka,~Ph.D.}
 
+\zadaniscan{figures/zadani.pdf}
 \prohlaseni{\subfile{sekce/prohlaseni.tex}}
 \podekovani{\subfile{sekce/podekovani.tex}}
 
