jazkor feedback feedback

--- a/sekce/1-uvod.tex
+++ b/sekce/1-uvod.tex
@@ -13,12 +13,13 @@ tendenci, změřit hodnotu závislosti či predikovat pomocí trendu, jak by
 vypadala data dosud nezměřená. Tyto problémy umíme řešit pomocí prokládání dat
 matematickými funkcemi. Proložení dat funkcí\footnote{známo také jako
 \emph{fitování} dat z~anglického \uv{fit}} nám umožňuje ověřit, zda předpis
-naší funkce odpovídá naměřeným datům, a~vypočítat neznámý parametr předpisu
+naší funkce odpovídá naměřeným datům, vypočítat neznámý parametr předpisu
 (využíváno například při počítání různých koeficientů materiálů), nebo
 % je to opravdu (ověřit AND vypočítat) XOR vyjádřit? (pokud OR, tak "nebo"
 % bez čárky)
 % mělo by to být ověřit OR vypočítat OR vyjádřit, respektive pokud se nepletu
 % tak jsem to původně myslel jako ověřit XOR vypočítat XOR vyjádřit
+%  vyndala jsem "a", aby to byly jasné XOR všude a nezavánělo to ANDem
 vyjádřit závislou veličinu pro zatím neměřené vstupní hodnoty (např.~predikce
 %infinitiv kvůli zachování jednotnosti věty
 počtu nakažených nemocí). Máme více možností, jak tohoto proložení dosáhnout,
