--- a/sekce/1-uvod.tex
+++ b/sekce/1-uvod.tex
@@ -11,8 +11,8 @@ velké množství dat.
 Data ovšem nejsou měřena bez nějakého účelu. Většinou se snažíme v~datech najít
 tendenci, změřit hodnotu závislosti či predikovat pomocí trendu, jak by
 vypadala data dosud nezměřená. Tyto problémy umíme řešit pomocí prokládání dat
-matematickými funkcemi. Proložení dat funkcí\footnote{známo také jako
-\emph{fitování} dat z~anglického \uv{fit}} nám umožňuje ověřit, zda předpis
+matematickými funkcemi. Proložení dat funkcí\footnote{Známo také jako
+\emph{fitování} dat z~anglického \uv{fit}.} nám umožňuje ověřit, zda předpis
 naší funkce odpovídá naměřeným datům, vypočítat neznámý parametr předpisu
 (využíváno například při počítání různých koeficientů materiálů), nebo
 % je to opravdu (ověřit AND vypočítat) XOR vyjádřit? (pokud OR, tak "nebo"
