--- a/sekce/4-vysledky.tex
+++ b/sekce/4-vysledky.tex
@@ -11,7 +11,7 @@ typu~T.
 
 \subsubsection{Princip měření}
 Experiment spočívá v ochlazování jednoho a~ohřívání druhého konce termočlánku%
-\footnotei{.}{Místa spojů kovů} Toho docílíme ponořením prvního
+\footnotei{.}{Místa spojů kovů.} Toho docílíme ponořením prvního
 spoje do vody s~ledem (kde udržujeme zhruba~$"0 \C"$) a~druhého do vroucí vody.
 % "vařící" by muselo být se zvratným zájmenem "se"
 Ta se během experimentu ochlazuje kvůli předávání tepla do okolí. Toho
